# rust-3d-demo

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  index.js  package.json  web.config  webpack.config.js
src/: app_state.rs  common_funcs.rs  constants.rs  gl_setup.rs  lib.rs
src/programs/: color_2d.rs  color_2d_gradient.rs  graph_3d.rs  mod.rs
src/shaders/: mod.rs
src/shaders/fragment/: color_2d.rs  mod.rs  varying_color_from_vertex.rs
src/shaders/vertex/: color_2d.rs  color_2d_gradient.rs  graph_3d.rs  mod.rs
